--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
                 color: 'bg-blue-600',
                 tags: ['HKDSE', 'Physics']
             },
+            // Inside the APPS array in index.html
             {
-                id: 'math',
-                title: 'Mathematics (Core)',
-                description: 'Drills on Algebra, Geometry, and Statistics. (Coming Soon)',
-                filename: '#', // Use '#' if not ready yet
-                icon: 'Calculator',
-                color: 'bg-emerald-600',
-                tags: ['HKDSE', 'Math'],
-                disabled: true
+                id: 'momentum',
+                title: 'Collision Lab',
+                description: 'Visualize conservation of momentum with elastic and inelastic collisions.',
+                filename: 'momentum.html', // Matches the filename you save below
+                icon: 'Atom', // Or any other icon
+                color: 'bg-indigo-600',
+                tags: ['Physics', 'Simulation']
             },
             {
                 id: 'chem',
