Change title and icon for the physics lab

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HKDSE Study Hub</title>
+    <title>Virtual Physics Lab</title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -50,7 +50,7 @@
                 title: 'Collision Lab',
                 description: 'Visualize conservation of momentum with elastic and inelastic collisions.',
                 filename: 'momentum.html', // Matches the filename you save below
-                icon: 'Atom', // Or any other icon
+                icon: 'Calculator', // Or any other icon
                 color: 'bg-indigo-600',
                 tags: ['Physics', 'Simulation']
             },
