Update header text for Virtual Physics Lab

--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
                     <div className="bg-slate-900 text-white pt-12 pb-24 px-6">
                         <div className="max-w-5xl mx-auto text-center">
                             <h1 className="text-4xl md:text-5xl font-extrabold tracking-tight mb-4">
-                                HKDSE Study Hub
+                                Virtual Physics Lab
                             </h1>
                             <p className="text-slate-400 text-lg max-w-2xl mx-auto">
-                                Interactive diagnostic tools and practice apps for Hong Kong Diploma of Secondary Education students.
+                                Interactive diagnostic tools and virtual lab for Physics students.
                             </p>
                         </div>
                     </div>
